<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="main_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="built_it_bigger">Built it bigger</string>
    <string name="xyz_reader">XYZ reader</string>
    <string name="capstone_own_app">Capstone: my own app</string>

</resources>
