<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView android:text="@string/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:id="@+id/textView"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        >

        <Button
            android:text="@string/spotify_streamer"
            style="@style/EqualButton.Orange"
            android:onClick="launchSpotifyStreamer"/>
        <Button
            android:text="@string/scores_app"
            style="@style/EqualButton.Orange"
            android:onClick="launchScores"/>
        <Button
            android:text="@string/library_app"
            style="@style/EqualButton.Orange"
            android:onClick="launchLibrary"/>
        <Button
            android:text="@string/built_it_bigger"
            style="@style/EqualButton.Orange"
            android:onClick="launchBuiltItBigger"/>
        <Button
            android:text="@string/xyz_reader"
            style="@style/EqualButton.Orange"
            android:onClick="launchXYZReader"/>
        <Button
            android:text="@string/capstone_own_app"
            style="@style/EqualButton.Red"
            android:onClick="launchCapstone"/>

    </LinearLayout>
</LinearLayout>

